--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -131,8 +131,8 @@ Mcu.PinsNb=111
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
-MxCube.Version=5.2.0
-MxDb.Version=DB.5.0.20
+MxCube.Version=5.4.0
+MxDb.Version=DB.5.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ETH_WKUP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -154,11 +154,11 @@ PA10.GPIO_Label=M_ORG
 PA10.Locked=true
 PA10.Signal=GPIO_Input
 PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=D-HEAD
+PA11.GPIO_Label=D_HEAD
 PA11.Locked=true
 PA11.Signal=GPIO_Output
 PA12.GPIOParameters=GPIO_Label
-PA12.GPIO_Label=T.KNOCK
+PA12.GPIO_Label=T_KNOCK
 PA12.Locked=true
 PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
@@ -211,7 +211,7 @@ PB14.GPIO_Label=Y_CCW
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=X-CW
+PB15.GPIO_Label=X_CW
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
@@ -219,7 +219,7 @@ PB2.GPIO_Label=BAD_MARK
 PB2.Locked=true
 PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=CW-CCW
+PB3.GPIO_Label=CW_CCW
 PB3.Locked=true
 PB3.Signal=GPIO_Output
 PB4.GPIOParameters=GPIO_Label
@@ -264,7 +264,7 @@ PC13-ANTI_TAMP.GPIO_Label=SPOT
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Output
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
-PC14-OSC32_IN.GPIO_Label=PAT-L
+PC14-OSC32_IN.GPIO_Label=PAT_L
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Output
 PC15-OSC32_OUT.GPIOParameters=GPIO_Label
@@ -282,11 +282,11 @@ PC6.GPIO_Label=VCC_SENS
 PC6.Locked=true
 PC6.Signal=GPIO_Input
 PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=HEAD-IN
+PC7.GPIO_Label=HEAD_IN
 PC7.Locked=true
 PC7.Signal=GPIO_Input
 PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=D-END
+PC8.GPIO_Label=D_END
 PC8.Locked=true
 PC8.Signal=GPIO_Input
 PC9.GPIOParameters=GPIO_Label
@@ -306,31 +306,31 @@ PD0.GPIO_Label=READY_OUT
 PD0.Locked=true
 PD0.Signal=GPIO_Output
 PD1.GPIOParameters=GPIO_Label
-PD1.GPIO_Label=D-START
+PD1.GPIO_Label=D_START
 PD1.Locked=true
 PD1.Signal=GPIO_Output
 PD10.GPIOParameters=GPIO_Label
-PD10.GPIO_Label=X-L2
+PD10.GPIO_Label=X_L2
 PD10.Locked=true
 PD10.Signal=GPIO_Input
 PD11.GPIOParameters=GPIO_Label
-PD11.GPIO_Label=X-L3
+PD11.GPIO_Label=X_L3
 PD11.Locked=true
 PD11.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_Label
-PD12.GPIO_Label=X-L4
+PD12.GPIO_Label=X_L4
 PD12.Locked=true
 PD12.Signal=GPIO_Input
 PD13.GPIOParameters=GPIO_Label
-PD13.GPIO_Label=X-HM
+PD13.GPIO_Label=X_HM
 PD13.Locked=true
 PD13.Signal=GPIO_Input
 PD14.GPIOParameters=GPIO_Label
-PD14.GPIO_Label=T-HEAD
+PD14.GPIO_Label=T_HEAD
 PD14.Locked=true
 PD14.Signal=GPIO_Input
 PD15.GPIOParameters=GPIO_Label
-PD15.GPIO_Label=T-VAC
+PD15.GPIO_Label=T_VAC
 PD15.Locked=true
 PD15.Signal=GPIO_Input
 PD2.GPIOParameters=GPIO_Label
@@ -354,11 +354,11 @@ PD7.GPIO_Label=CENTERING
 PD7.Locked=true
 PD7.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_Label
-PD8.GPIO_Label=X-CCW
+PD8.GPIO_Label=X_CCW
 PD8.Locked=true
 PD8.Signal=GPIO_Output
 PD9.GPIOParameters=GPIO_Label
-PD9.GPIO_Label=X-L1
+PD9.GPIO_Label=X_L1
 PD9.Locked=true
 PD9.Signal=GPIO_Input
 PE0.GPIOParameters=GPIO_Label
@@ -390,15 +390,15 @@ PE14.GPIO_Label=Y_L1
 PE14.Locked=true
 PE14.Signal=GPIO_Input
 PE15.GPIOParameters=GPIO_Label
-PE15.GPIO_Label=X-CW
+PE15.GPIO_Label=X_CW
 PE15.Locked=true
 PE15.Signal=GPIO_Output
 PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=DATA-2
+PE3.GPIO_Label=DATA_2
 PE3.Locked=true
 PE3.Signal=GPIO_Output
 PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=DATA-1
+PE4.GPIO_Label=DATA_1
 PE4.Locked=true
 PE4.Signal=GPIO_Output
 PE5.GPIOParameters=GPIO_Label
@@ -406,7 +406,7 @@ PE5.GPIO_Label=STROBE
 PE5.Locked=true
 PE5.Signal=GPIO_Output
 PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=DATA-4
+PE6.GPIO_Label=DATA_4
 PE6.Locked=true
 PE6.Signal=GPIO_Output
 PE7.GPIOParameters=GPIO_Label
@@ -422,7 +422,7 @@ PE9.GPIO_Label=M_CENTER
 PE9.Locked=true
 PE9.Signal=GPIO_Input
 PF0.GPIOParameters=GPIO_Label
-PF0.GPIO_Label=VAC_0.8
+PF0.GPIO_Label=VAC_08
 PF0.Locked=true
 PF0.Signal=GPIO_Output
 PF1.GPIOParameters=GPIO_Label
@@ -454,7 +454,7 @@ PF15.GPIO_Label=PCB_OUT
 PF15.Locked=true
 PF15.Signal=GPIO_Input
 PF2.GPIOParameters=GPIO_Label
-PF2.GPIO_Label=CVY-M
+PF2.GPIO_Label=CVY_M
 PF2.Locked=true
 PF2.Signal=GPIO_Output
 PF3.GPIOParameters=GPIO_Label
@@ -506,11 +506,11 @@ PG12.GPIO_Label=SENSORDRV
 PG12.Locked=true
 PG12.Signal=GPIO_Output
 PG13.GPIOParameters=GPIO_Label
-PG13.GPIO_Label=V-CNG
+PG13.GPIO_Label=V_CNG
 PG13.Locked=true
 PG13.Signal=GPIO_Output
 PG14.GPIOParameters=GPIO_Label
-PG14.GPIO_Label=A-CENT
+PG14.GPIO_Label=A_CENT
 PG14.Locked=true
 PG14.Signal=GPIO_Output
 PG15.GPIOParameters=GPIO_Label
@@ -526,19 +526,19 @@ PG3.GPIO_Label=FAST
 PG3.Locked=true
 PG3.Signal=GPIO_Input
 PG4.GPIOParameters=GPIO_Label
-PG4.GPIO_Label=Y-
+PG4.GPIO_Label=Y_MINUS
 PG4.Locked=true
 PG4.Signal=GPIO_Input
 PG5.GPIOParameters=GPIO_Label
-PG5.GPIO_Label=Y+
+PG5.GPIO_Label=Y_PLUS
 PG5.Locked=true
 PG5.Signal=GPIO_Input
 PG6.GPIOParameters=GPIO_Label
-PG6.GPIO_Label=X-
+PG6.GPIO_Label=X_MINUS
 PG6.Locked=true
 PG6.Signal=GPIO_Input
 PG7.GPIOParameters=GPIO_Label
-PG7.GPIO_Label=X+
+PG7.GPIO_Label=X_PLUS
 PG7.Locked=true
 PG7.Signal=GPIO_Input
 PG8.GPIOParameters=GPIO_Label
@@ -556,7 +556,7 @@ PH1-OSC_OUT.Locked=true
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -570,7 +570,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
@@ -639,3 +639,4 @@ VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
+isbadioc=false
