Update HW Configuration

--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -27,8 +27,10 @@ Mcu.Pin105=PE0
 Mcu.Pin106=PE1
 Mcu.Pin107=VP_SYS_VS_Systick
 Mcu.Pin108=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin109=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin109=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin11=PF4
+Mcu.Pin110=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin111=VP_TIM3_VS_ClockSourceITR
 Mcu.Pin12=PF5
 Mcu.Pin13=PF6
 Mcu.Pin14=PF7
@@ -125,7 +127,7 @@ Mcu.Pin96=PG14
 Mcu.Pin97=PG15
 Mcu.Pin98=PB3
 Mcu.Pin99=PB4
-Mcu.PinsNb=110
+Mcu.PinsNb=112
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -309,16 +311,19 @@ PD1.GPIOParameters=GPIO_Label
 PD1.GPIO_Label=D-START
 PD1.Locked=true
 PD1.Signal=GPIO_Output
-PD10.GPIOParameters=GPIO_Label
+PD10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD10.GPIO_Label=X_L2
+PD10.GPIO_PuPd=GPIO_PULLUP
 PD10.Locked=true
 PD10.Signal=GPIO_Input
-PD11.GPIOParameters=GPIO_Label
+PD11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD11.GPIO_Label=X_L3
+PD11.GPIO_PuPd=GPIO_PULLUP
 PD11.Locked=true
 PD11.Signal=GPIO_Input
-PD12.GPIOParameters=GPIO_Label
+PD12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD12.GPIO_Label=X_L4
+PD12.GPIO_PuPd=GPIO_PULLUP
 PD12.Locked=true
 PD12.Signal=GPIO_Input
 PD13.GPIOParameters=GPIO_Label
@@ -357,8 +362,9 @@ PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=X_CCW
 PD8.Locked=true
 PD8.Signal=GPIO_Output
-PD9.GPIOParameters=GPIO_Label
+PD9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD9.GPIO_Label=X_L1
+PD9.GPIO_PuPd=GPIO_PULLUP
 PD9.Locked=true
 PD9.Signal=GPIO_Input
 PE0.GPIOParameters=GPIO_Label
@@ -373,20 +379,24 @@ PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=Y_HM
 PE10.Locked=true
 PE10.Signal=GPIO_Input
-PE11.GPIOParameters=GPIO_Label
+PE11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE11.GPIO_Label=Y_L4
+PE11.GPIO_PuPd=GPIO_PULLUP
 PE11.Locked=true
 PE11.Signal=GPIO_Input
-PE12.GPIOParameters=GPIO_Label
+PE12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE12.GPIO_Label=Y_L3
+PE12.GPIO_PuPd=GPIO_PULLUP
 PE12.Locked=true
 PE12.Signal=GPIO_Input
-PE13.GPIOParameters=GPIO_Label
+PE13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE13.GPIO_Label=Y_L2
+PE13.GPIO_PuPd=GPIO_PULLUP
 PE13.Locked=true
 PE13.Signal=GPIO_Input
-PE14.GPIOParameters=GPIO_Label
+PE14.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE14.GPIO_Label=Y_L1
+PE14.GPIO_PuPd=GPIO_PULLUP
 PE14.Locked=true
 PE14.Signal=GPIO_Input
 PE15.GPIOParameters=GPIO_Label
@@ -634,7 +644,11 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM3_VS_ClockSourceITR.Signal=TIM3_VS_ClockSourceITR
 board=custom
 isbadioc=false
