--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -11,8 +11,9 @@ Mcu.IP3=SPI3
 Mcu.IP4=SYS
 Mcu.IP5=TIM2
 Mcu.IP6=TIM3
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP7=TIM14
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
@@ -31,6 +32,7 @@ Mcu.Pin109=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin11=PF4
 Mcu.Pin110=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin111=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin112=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin12=PF5
 Mcu.Pin13=PF6
 Mcu.Pin14=PF7
@@ -127,7 +129,7 @@ Mcu.Pin96=PG14
 Mcu.Pin97=PG15
 Mcu.Pin98=PB3
 Mcu.Pin99=PB4
-Mcu.PinsNb=112
+Mcu.PinsNb=113
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -146,6 +148,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA1.Locked=true
@@ -327,7 +330,7 @@ PD12.GPIO_PuPd=GPIO_PULLUP
 PD12.Locked=true
 PD12.Signal=GPIO_Input
 PD13.GPIOParameters=GPIO_Label
-PD13.GPIO_Label=XHM
+PD13.GPIO_Label=X_HM
 PD13.Locked=true
 PD13.Signal=GPIO_Input
 PD14.GPIOParameters=GPIO_Label
@@ -592,7 +595,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_SPI3_Init-SPI3-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_SPI3_Init-SPI3-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=40000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -638,10 +641,16 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM14.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM14.IPParameters=Period,ClockDivision,AutoReloadPreload
+TIM14.Period=1000
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
