Update GPIO in CubeMX project
Input Pins for Limit switch and input buttons are pull up
Output pins for X/Y Stepper are very fast

--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -211,12 +211,14 @@ PB12.Signal=ETH_TXD0
 PB13.Locked=true
 PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
-PB14.GPIOParameters=GPIO_Label
+PB14.GPIOParameters=GPIO_Speed,GPIO_Label
 PB14.GPIO_Label=Y_CCW
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Label
+PB15.GPIOParameters=GPIO_Speed,GPIO_Label
 PB15.GPIO_Label=X_CW
+PB15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
@@ -337,12 +339,14 @@ PD14.GPIOParameters=GPIO_Label
 PD14.GPIO_Label=T_HEAD
 PD14.Locked=true
 PD14.Signal=GPIO_Input
-PD15.GPIOParameters=GPIO_Label
+PD15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD15.GPIO_Label=T_VAC
+PD15.GPIO_PuPd=GPIO_PULLUP
 PD15.Locked=true
 PD15.Signal=GPIO_Input
-PD2.GPIOParameters=GPIO_Label
+PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD2.GPIO_Label=VAC
+PD2.GPIO_PuPd=GPIO_PULLUP
 PD2.Locked=true
 PD2.Signal=GPIO_Output
 PD3.GPIOParameters=GPIO_Label
@@ -361,8 +365,9 @@ PD7.GPIOParameters=GPIO_Label
 PD7.GPIO_Label=CENTERING
 PD7.Locked=true
 PD7.Signal=GPIO_Output
-PD8.GPIOParameters=GPIO_Label
+PD8.GPIOParameters=GPIO_Speed,GPIO_Label
 PD8.GPIO_Label=X_CCW
+PD8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD8.Locked=true
 PD8.Signal=GPIO_Output
 PD9.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -402,8 +407,9 @@ PE14.GPIO_Label=Y_L1
 PE14.GPIO_PuPd=GPIO_PULLUP
 PE14.Locked=true
 PE14.Signal=GPIO_Input
-PE15.GPIOParameters=GPIO_Label
+PE15.GPIOParameters=GPIO_Speed,GPIO_Label
 PE15.GPIO_Label=Y_CW
+PE15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE15.Locked=true
 PE15.Signal=GPIO_Output
 PE3.GPIOParameters=GPIO_Label
@@ -530,28 +536,33 @@ PG15.GPIOParameters=GPIO_Label
 PG15.GPIO_Label=PULSE
 PG15.Locked=true
 PG15.Signal=GPIO_Output
-PG2.GPIOParameters=GPIO_Label
+PG2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG2.GPIO_Label=TEACH
+PG2.GPIO_PuPd=GPIO_PULLUP
 PG2.Locked=true
 PG2.Signal=GPIO_Input
 PG3.GPIOParameters=GPIO_Label
 PG3.GPIO_Label=FAST
 PG3.Locked=true
 PG3.Signal=GPIO_Input
-PG4.GPIOParameters=GPIO_Label
+PG4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG4.GPIO_Label=Y_MINUS
+PG4.GPIO_PuPd=GPIO_PULLUP
 PG4.Locked=true
 PG4.Signal=GPIO_Input
-PG5.GPIOParameters=GPIO_Label
+PG5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG5.GPIO_Label=Y_PLUS
+PG5.GPIO_PuPd=GPIO_PULLUP
 PG5.Locked=true
 PG5.Signal=GPIO_Input
-PG6.GPIOParameters=GPIO_Label
+PG6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG6.GPIO_Label=X_MINUS
+PG6.GPIO_PuPd=GPIO_PULLUP
 PG6.Locked=true
 PG6.Signal=GPIO_Input
-PG7.GPIOParameters=GPIO_Label
+PG7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG7.GPIO_Label=X_PLUS
+PG7.GPIO_PuPd=GPIO_PULLUP
 PG7.Locked=true
 PG7.Signal=GPIO_Input
 PG8.GPIOParameters=GPIO_Label
