--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -318,17 +318,17 @@ PD1.Locked=true
 PD1.Signal=GPIO_Output
 PD10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD10.GPIO_Label=X_L2
-PD10.GPIO_PuPd=GPIO_PULLUP
+PD10.GPIO_PuPd=GPIO_NOPULL
 PD10.Locked=true
 PD10.Signal=GPIO_Input
 PD11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD11.GPIO_Label=X_L3
-PD11.GPIO_PuPd=GPIO_PULLUP
+PD11.GPIO_PuPd=GPIO_NOPULL
 PD11.Locked=true
 PD11.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD12.GPIO_Label=X_L4
-PD12.GPIO_PuPd=GPIO_PULLUP
+PD12.GPIO_PuPd=GPIO_NOPULL
 PD12.Locked=true
 PD12.Signal=GPIO_Input
 PD13.GPIOParameters=GPIO_Label
@@ -372,7 +372,7 @@ PD8.Locked=true
 PD8.Signal=GPIO_Output
 PD9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD9.GPIO_Label=X_L1
-PD9.GPIO_PuPd=GPIO_PULLUP
+PD9.GPIO_PuPd=GPIO_NOPULL
 PD9.Locked=true
 PD9.Signal=GPIO_Input
 PE0.GPIOParameters=GPIO_Label
@@ -389,22 +389,22 @@ PE10.Locked=true
 PE10.Signal=GPIO_Input
 PE11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE11.GPIO_Label=Y_L4
-PE11.GPIO_PuPd=GPIO_PULLUP
+PE11.GPIO_PuPd=GPIO_PULLDOWN
 PE11.Locked=true
 PE11.Signal=GPIO_Input
 PE12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE12.GPIO_Label=Y_L3
-PE12.GPIO_PuPd=GPIO_PULLUP
+PE12.GPIO_PuPd=GPIO_PULLDOWN
 PE12.Locked=true
 PE12.Signal=GPIO_Input
 PE13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE13.GPIO_Label=Y_L2
-PE13.GPIO_PuPd=GPIO_PULLUP
+PE13.GPIO_PuPd=GPIO_PULLDOWN
 PE13.Locked=true
 PE13.Signal=GPIO_Input
 PE14.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE14.GPIO_Label=Y_L1
-PE14.GPIO_PuPd=GPIO_PULLUP
+PE14.GPIO_PuPd=GPIO_PULLDOWN
 PE14.Locked=true
 PE14.Signal=GPIO_Input
 PE15.GPIOParameters=GPIO_Speed,GPIO_Label
