Add RUN LED Output

--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -19,20 +19,21 @@ Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
 Mcu.Pin10=PF3
-Mcu.Pin100=PB5
-Mcu.Pin101=PB6
-Mcu.Pin102=PB7
-Mcu.Pin103=PB8
-Mcu.Pin104=PB9
-Mcu.Pin105=PE0
-Mcu.Pin106=PE1
-Mcu.Pin107=VP_SYS_VS_Systick
-Mcu.Pin108=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin109=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin100=PB4
+Mcu.Pin101=PB5
+Mcu.Pin102=PB6
+Mcu.Pin103=PB7
+Mcu.Pin104=PB8
+Mcu.Pin105=PB9
+Mcu.Pin106=PE0
+Mcu.Pin107=PE1
+Mcu.Pin108=VP_SYS_VS_Systick
+Mcu.Pin109=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin11=PF4
-Mcu.Pin110=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin111=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin112=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin110=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin111=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin112=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin113=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin12=PF5
 Mcu.Pin13=PF6
 Mcu.Pin14=PF7
@@ -46,90 +47,90 @@ Mcu.Pin20=PC0
 Mcu.Pin21=PC1
 Mcu.Pin22=PA1
 Mcu.Pin23=PA2
-Mcu.Pin24=PA4
-Mcu.Pin25=PA5
-Mcu.Pin26=PA6
-Mcu.Pin27=PA7
-Mcu.Pin28=PC4
-Mcu.Pin29=PC5
+Mcu.Pin24=PA3
+Mcu.Pin25=PA4
+Mcu.Pin26=PA5
+Mcu.Pin27=PA6
+Mcu.Pin28=PA7
+Mcu.Pin29=PC4
 Mcu.Pin3=PE6
-Mcu.Pin30=PB2
-Mcu.Pin31=PF11
-Mcu.Pin32=PF12
-Mcu.Pin33=PF13
-Mcu.Pin34=PF14
-Mcu.Pin35=PF15
-Mcu.Pin36=PG0
-Mcu.Pin37=PG1
-Mcu.Pin38=PE7
-Mcu.Pin39=PE8
+Mcu.Pin30=PC5
+Mcu.Pin31=PB2
+Mcu.Pin32=PF11
+Mcu.Pin33=PF12
+Mcu.Pin34=PF13
+Mcu.Pin35=PF14
+Mcu.Pin36=PF15
+Mcu.Pin37=PG0
+Mcu.Pin38=PG1
+Mcu.Pin39=PE7
 Mcu.Pin4=PC13-ANTI_TAMP
-Mcu.Pin40=PE9
-Mcu.Pin41=PE10
-Mcu.Pin42=PE11
-Mcu.Pin43=PE12
-Mcu.Pin44=PE13
-Mcu.Pin45=PE14
-Mcu.Pin46=PE15
-Mcu.Pin47=PB10
-Mcu.Pin48=PB11
-Mcu.Pin49=PB12
+Mcu.Pin40=PE8
+Mcu.Pin41=PE9
+Mcu.Pin42=PE10
+Mcu.Pin43=PE11
+Mcu.Pin44=PE12
+Mcu.Pin45=PE13
+Mcu.Pin46=PE14
+Mcu.Pin47=PE15
+Mcu.Pin48=PB10
+Mcu.Pin49=PB11
 Mcu.Pin5=PC14-OSC32_IN
-Mcu.Pin50=PB13
-Mcu.Pin51=PB14
-Mcu.Pin52=PB15
-Mcu.Pin53=PD8
-Mcu.Pin54=PD9
-Mcu.Pin55=PD10
-Mcu.Pin56=PD11
-Mcu.Pin57=PD12
-Mcu.Pin58=PD13
-Mcu.Pin59=PD14
+Mcu.Pin50=PB12
+Mcu.Pin51=PB13
+Mcu.Pin52=PB14
+Mcu.Pin53=PB15
+Mcu.Pin54=PD8
+Mcu.Pin55=PD9
+Mcu.Pin56=PD10
+Mcu.Pin57=PD11
+Mcu.Pin58=PD12
+Mcu.Pin59=PD13
 Mcu.Pin6=PC15-OSC32_OUT
-Mcu.Pin60=PD15
-Mcu.Pin61=PG2
-Mcu.Pin62=PG3
-Mcu.Pin63=PG4
-Mcu.Pin64=PG5
-Mcu.Pin65=PG6
-Mcu.Pin66=PG7
-Mcu.Pin67=PG8
-Mcu.Pin68=PC6
-Mcu.Pin69=PC7
+Mcu.Pin60=PD14
+Mcu.Pin61=PD15
+Mcu.Pin62=PG2
+Mcu.Pin63=PG3
+Mcu.Pin64=PG4
+Mcu.Pin65=PG5
+Mcu.Pin66=PG6
+Mcu.Pin67=PG7
+Mcu.Pin68=PG8
+Mcu.Pin69=PC6
 Mcu.Pin7=PF0
-Mcu.Pin70=PC8
-Mcu.Pin71=PC9
-Mcu.Pin72=PA8
-Mcu.Pin73=PA9
-Mcu.Pin74=PA10
-Mcu.Pin75=PA11
-Mcu.Pin76=PA12
-Mcu.Pin77=PA13
-Mcu.Pin78=PA14
-Mcu.Pin79=PA15
+Mcu.Pin70=PC7
+Mcu.Pin71=PC8
+Mcu.Pin72=PC9
+Mcu.Pin73=PA8
+Mcu.Pin74=PA9
+Mcu.Pin75=PA10
+Mcu.Pin76=PA11
+Mcu.Pin77=PA12
+Mcu.Pin78=PA13
+Mcu.Pin79=PA14
 Mcu.Pin8=PF1
-Mcu.Pin80=PC10
-Mcu.Pin81=PC11
-Mcu.Pin82=PC12
-Mcu.Pin83=PD0
-Mcu.Pin84=PD1
-Mcu.Pin85=PD2
-Mcu.Pin86=PD3
-Mcu.Pin87=PD4
-Mcu.Pin88=PD5
-Mcu.Pin89=PD6
+Mcu.Pin80=PA15
+Mcu.Pin81=PC10
+Mcu.Pin82=PC11
+Mcu.Pin83=PC12
+Mcu.Pin84=PD0
+Mcu.Pin85=PD1
+Mcu.Pin86=PD2
+Mcu.Pin87=PD3
+Mcu.Pin88=PD4
+Mcu.Pin89=PD5
 Mcu.Pin9=PF2
-Mcu.Pin90=PD7
-Mcu.Pin91=PG9
-Mcu.Pin92=PG10
-Mcu.Pin93=PG11
-Mcu.Pin94=PG12
-Mcu.Pin95=PG13
-Mcu.Pin96=PG14
-Mcu.Pin97=PG15
-Mcu.Pin98=PB3
-Mcu.Pin99=PB4
-Mcu.PinsNb=113
+Mcu.Pin90=PD6
+Mcu.Pin91=PD7
+Mcu.Pin92=PG9
+Mcu.Pin93=PG10
+Mcu.Pin94=PG11
+Mcu.Pin95=PG12
+Mcu.Pin96=PG13
+Mcu.Pin97=PG14
+Mcu.Pin98=PG15
+Mcu.Pin99=PB3
+Mcu.PinsNb=114
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -177,6 +178,10 @@ PA15.Signal=GPIO_Output
 PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=RUN
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA4.Locked=true
 PA4.Signal=GPXTI4
 PA5.GPIOParameters=GPIO_Label
@@ -580,7 +585,7 @@ PH1-OSC_OUT.Locked=true
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -672,4 +677,3 @@ VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR0
 VP_TIM3_VS_ClockSourceITR.Signal=TIM3_VS_ClockSourceITR
 board=custom
-isbadioc=false
