--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -599,7 +599,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
@@ -612,38 +612,37 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_SPI3_Init-SPI3-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
-RCC.48MHZClocksFreq_Value=40000000
-RCC.AHBFreq_Value=80000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.48MHZClocksFreq_Value=80000000
+RCC.AHBFreq_Value=160000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=40000000
 RCC.APB1TimFreq_Value=80000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=40000000
-RCC.APB2TimFreq_Value=80000000
-RCC.CortexFreq_Value=80000000
-RCC.EthernetFreq_Value=80000000
-RCC.FCLKCortexFreq_Value=80000000
+RCC.APB2Freq_Value=80000000
+RCC.APB2TimFreq_Value=160000000
+RCC.CortexFreq_Value=160000000
+RCC.EthernetFreq_Value=160000000
+RCC.FCLKCortexFreq_Value=160000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=80000000
+RCC.HCLKFreq_Value=160000000
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=160000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=80000000
-RCC.PLLCLKFreq_Value=80000000
+RCC.MCO2PinFreq_Value=160000000
+RCC.PLLCLKFreq_Value=160000000
 RCC.PLLM=15
-RCC.PLLN=96
-RCC.PLLQCLKFreq_Value=40000000
+RCC.PLLQCLKFreq_Value=80000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=12500000
-RCC.SYSCLKFreq_VALUE=80000000
+RCC.SYSCLKFreq_VALUE=160000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=320000000
 RCC.VCOInputFreq_Value=1666666.6666666667
-RCC.VCOOutputFreq_Value=160000000
+RCC.VCOOutputFreq_Value=320000000
 RCC.VcooutputI2S=160000000
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
@@ -662,6 +661,13 @@ TIM14.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM14.IPParameters=Period,ClockDivision,AutoReloadPreload,Prescaler
 TIM14.Period=1000
 TIM14.Prescaler=100
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM2.IPParameters=Period,ClockDivision
+TIM2.Period=1000
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
+TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM3.IPParameters=Period,ClockDivision,AutoReloadPreload
+TIM3.Period=0
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
@@ -677,3 +683,4 @@ VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR0
 VP_TIM3_VS_ClockSourceITR.Signal=TIM3_VS_ClockSourceITR
 board=custom
+isbadioc=false
