--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -377,7 +377,7 @@ PD8.Locked=true
 PD8.Signal=GPIO_Output
 PD9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD9.GPIO_Label=X_L1
-PD9.GPIO_PuPd=GPIO_NOPULL
+PD9.GPIO_PuPd=GPIO_PULLUP
 PD9.Locked=true
 PD9.Signal=GPIO_Input
 PE0.GPIOParameters=GPIO_Label
@@ -394,22 +394,22 @@ PE10.Locked=true
 PE10.Signal=GPIO_Input
 PE11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE11.GPIO_Label=Y_L4
-PE11.GPIO_PuPd=GPIO_PULLDOWN
+PE11.GPIO_PuPd=GPIO_NOPULL
 PE11.Locked=true
 PE11.Signal=GPIO_Input
 PE12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE12.GPIO_Label=Y_L3
-PE12.GPIO_PuPd=GPIO_PULLDOWN
+PE12.GPIO_PuPd=GPIO_NOPULL
 PE12.Locked=true
 PE12.Signal=GPIO_Input
 PE13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE13.GPIO_Label=Y_L2
-PE13.GPIO_PuPd=GPIO_PULLDOWN
+PE13.GPIO_PuPd=GPIO_NOPULL
 PE13.Locked=true
 PE13.Signal=GPIO_Input
 PE14.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE14.GPIO_Label=Y_L1
-PE14.GPIO_PuPd=GPIO_PULLDOWN
+PE14.GPIO_PuPd=GPIO_PULLUP
 PE14.Locked=true
 PE14.Signal=GPIO_Input
 PE15.GPIOParameters=GPIO_Speed,GPIO_Label
