enable buttons to do jogging and start homing cycle

--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -2,6 +2,7 @@
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ETH
@@ -155,8 +156,9 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA1.Locked=true
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
-PA10.GPIOParameters=GPIO_Label
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=M_ORG
+PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
 PA10.Signal=GPIO_Input
 PA11.GPIOParameters=GPIO_Label
@@ -418,11 +420,11 @@ PE15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE15.Locked=true
 PE15.Signal=GPIO_Output
 PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=DATA-2
+PE3.GPIO_Label=DATA_2
 PE3.Locked=true
 PE3.Signal=GPIO_Output
 PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=DATA-1
+PE4.GPIO_Label=DATA_1
 PE4.Locked=true
 PE4.Signal=GPIO_Output
 PE5.GPIOParameters=GPIO_Label
