--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -135,8 +135,8 @@ Mcu.PinsNb=114
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
-MxCube.Version=5.4.0
-MxDb.Version=DB.5.0.40
+MxCube.Version=5.5.0
+MxDb.Version=DB.5.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ETH_WKUP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -218,15 +218,17 @@ PB12.Signal=ETH_TXD0
 PB13.Locked=true
 PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
-PB14.GPIOParameters=GPIO_Speed,GPIO_Label
+PB14.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PB14.GPIO_Label=Y_CCW
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB14.Locked=true
+PB14.PinState=GPIO_PIN_SET
 PB14.Signal=GPIO_Output
-PB15.GPIOParameters=GPIO_Speed,GPIO_Label
+PB15.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PB15.GPIO_Label=X_CW
 PB15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB15.Locked=true
+PB15.PinState=GPIO_PIN_SET
 PB15.Signal=GPIO_Output
 PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=BAD_MARK
@@ -372,10 +374,11 @@ PD7.GPIOParameters=GPIO_Label
 PD7.GPIO_Label=CENTERING
 PD7.Locked=true
 PD7.Signal=GPIO_Output
-PD8.GPIOParameters=GPIO_Speed,GPIO_Label
+PD8.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PD8.GPIO_Label=X_CCW
 PD8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD8.Locked=true
+PD8.PinState=GPIO_PIN_SET
 PD8.Signal=GPIO_Output
 PD9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD9.GPIO_Label=X_L1
@@ -414,10 +417,11 @@ PE14.GPIO_Label=Y_L1
 PE14.GPIO_PuPd=GPIO_PULLUP
 PE14.Locked=true
 PE14.Signal=GPIO_Input
-PE15.GPIOParameters=GPIO_Speed,GPIO_Label
+PE15.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PE15.GPIO_Label=Y_CW
 PE15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE15.Locked=true
+PE15.PinState=GPIO_PIN_SET
 PE15.Signal=GPIO_Output
 PE3.GPIOParameters=GPIO_Label
 PE3.GPIO_Label=DATA_2
@@ -613,7 +617,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_SPI3_Init-SPI3-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_SPI3_Init-SPI3-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM14_Init-TIM14-false-HAL-true
 RCC.48MHZClocksFreq_Value=80000000
 RCC.AHBFreq_Value=160000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
