update GPIO names to correspond schematics

--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -294,11 +294,11 @@ PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
 PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=VCC_SENS
+PC6.GPIO_Label=VAC_SENS
 PC6.Locked=true
 PC6.Signal=GPIO_Input
 PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=HEAD_IN
+PC7.GPIO_Label=HEAD_DN
 PC7.Locked=true
 PC7.Signal=GPIO_Input
 PC8.GPIOParameters=GPIO_Label
@@ -322,7 +322,7 @@ PD0.GPIO_Label=READY_OUT
 PD0.Locked=true
 PD0.Signal=GPIO_Output
 PD1.GPIOParameters=GPIO_Label
-PD1.GPIO_Label=D-START
+PD1.GPIO_Label=DSTART_
 PD1.Locked=true
 PD1.Signal=GPIO_Output
 PD10.GPIOParameters=GPIO_PuPd,GPIO_Label
