every input pin set to PU in IOC file

--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -2,7 +2,6 @@
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 File.Version=6
-GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ETH
@@ -135,8 +134,8 @@ Mcu.PinsNb=114
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
-MxCube.Version=5.5.0
-MxDb.Version=DB.5.0.50
+MxCube.Version=5.4.0
+MxDb.Version=DB.5.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ETH_WKUP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -186,23 +185,27 @@ PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.Locked=true
 PA4.Signal=GPXTI4
-PA5.GPIOParameters=GPIO_Label
+PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA5.GPIO_Label=SP_4
+PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 PA5.Signal=GPIO_Input
-PA6.GPIOParameters=GPIO_Label
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA6.GPIO_Label=SP_5
+PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 PA6.Signal=GPIO_Input
 PA7.Locked=true
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA8.GPIO_Label=SP_10
+PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Locked=true
 PA8.Signal=GPIO_Input
-PA9.GPIOParameters=GPIO_Label
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=SP_9
+PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Locked=true
 PA9.Signal=GPIO_Input
 PB10.GPIOParameters=GPIO_Label
@@ -230,8 +233,9 @@ PB15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB15.Locked=true
 PB15.PinState=GPIO_PIN_SET
 PB15.Signal=GPIO_Output
-PB2.GPIOParameters=GPIO_Label
+PB2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB2.GPIO_Label=BAD_MARK
+PB2.GPIO_PuPd=GPIO_PULLUP
 PB2.Locked=true
 PB2.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
@@ -262,8 +266,9 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=STP1_STP
 PB9.Locked=true
 PB9.Signal=S_TIM4_CH4
-PC0.GPIOParameters=GPIO_Label
+PC0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC0.GPIO_Label=SP_3
+PC0.GPIO_PuPd=GPIO_PULLUP
 PC0.Locked=true
 PC0.Signal=GPIO_Input
 PC1.Locked=true
@@ -293,20 +298,24 @@ PC4.Signal=ETH_RXD0
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
-PC6.GPIOParameters=GPIO_Label
+PC6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC6.GPIO_Label=VAC_SENS
+PC6.GPIO_PuPd=GPIO_PULLUP
 PC6.Locked=true
 PC6.Signal=GPIO_Input
-PC7.GPIOParameters=GPIO_Label
+PC7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC7.GPIO_Label=HEAD_DN
+PC7.GPIO_PuPd=GPIO_PULLUP
 PC7.Locked=true
 PC7.Signal=GPIO_Input
-PC8.GPIOParameters=GPIO_Label
+PC8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC8.GPIO_Label=D_END
+PC8.GPIO_PuPd=GPIO_PULLUP
 PC8.Locked=true
 PC8.Signal=GPIO_Input
-PC9.GPIOParameters=GPIO_Label
+PC9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC9.GPIO_Label=READY_IN
+PC9.GPIO_PuPd=GPIO_PULLUP
 PC9.Locked=true
 PC9.Signal=GPIO_Input
 PCC.Checker=false
@@ -327,25 +336,27 @@ PD1.Locked=true
 PD1.Signal=GPIO_Output
 PD10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD10.GPIO_Label=X_L2
-PD10.GPIO_PuPd=GPIO_NOPULL
+PD10.GPIO_PuPd=GPIO_PULLUP
 PD10.Locked=true
 PD10.Signal=GPIO_Input
 PD11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD11.GPIO_Label=X_L3
-PD11.GPIO_PuPd=GPIO_NOPULL
+PD11.GPIO_PuPd=GPIO_PULLUP
 PD11.Locked=true
 PD11.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD12.GPIO_Label=X_L4
-PD12.GPIO_PuPd=GPIO_NOPULL
+PD12.GPIO_PuPd=GPIO_PULLUP
 PD12.Locked=true
 PD12.Signal=GPIO_Input
-PD13.GPIOParameters=GPIO_Label
+PD13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD13.GPIO_Label=X_HM
+PD13.GPIO_PuPd=GPIO_PULLUP
 PD13.Locked=true
 PD13.Signal=GPIO_Input
-PD14.GPIOParameters=GPIO_Label
+PD14.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD14.GPIO_Label=T_HEAD
+PD14.GPIO_PuPd=GPIO_PULLUP
 PD14.Locked=true
 PD14.Signal=GPIO_Input
 PD15.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -355,7 +366,7 @@ PD15.Locked=true
 PD15.Signal=GPIO_Input
 PD2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD2.GPIO_Label=VAC
-PD2.GPIO_PuPd=GPIO_PULLUP
+PD2.GPIO_PuPd=GPIO_NOPULL
 PD2.Locked=true
 PD2.Signal=GPIO_Output
 PD3.GPIOParameters=GPIO_Label
@@ -393,23 +404,24 @@ PE1.GPIOParameters=GPIO_Label
 PE1.GPIO_Label=STP1_nSLP
 PE1.Locked=true
 PE1.Signal=GPIO_Output
-PE10.GPIOParameters=GPIO_Label
+PE10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE10.GPIO_Label=Y_HM
+PE10.GPIO_PuPd=GPIO_PULLUP
 PE10.Locked=true
 PE10.Signal=GPIO_Input
 PE11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE11.GPIO_Label=Y_L4
-PE11.GPIO_PuPd=GPIO_NOPULL
+PE11.GPIO_PuPd=GPIO_PULLUP
 PE11.Locked=true
 PE11.Signal=GPIO_Input
 PE12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE12.GPIO_Label=Y_L3
-PE12.GPIO_PuPd=GPIO_NOPULL
+PE12.GPIO_PuPd=GPIO_PULLUP
 PE12.Locked=true
 PE12.Signal=GPIO_Input
 PE13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE13.GPIO_Label=Y_L2
-PE13.GPIO_PuPd=GPIO_NOPULL
+PE13.GPIO_PuPd=GPIO_PULLUP
 PE13.Locked=true
 PE13.Signal=GPIO_Input
 PE14.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -439,16 +451,19 @@ PE6.GPIOParameters=GPIO_Label
 PE6.GPIO_Label=DATA_4
 PE6.Locked=true
 PE6.Signal=GPIO_Output
-PE7.GPIOParameters=GPIO_Label
+PE7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE7.GPIO_Label=CCW_SW
+PE7.GPIO_PuPd=GPIO_PULLUP
 PE7.Locked=true
 PE7.Signal=GPIO_Input
-PE8.GPIOParameters=GPIO_Label
+PE8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE8.GPIO_Label=CW_SW
+PE8.GPIO_PuPd=GPIO_PULLUP
 PE8.Locked=true
 PE8.Signal=GPIO_Input
-PE9.GPIOParameters=GPIO_Label
+PE9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE9.GPIO_Label=M_CENTER
+PE9.GPIO_PuPd=GPIO_PULLUP
 PE9.Locked=true
 PE9.Signal=GPIO_Input
 PF0.GPIOParameters=GPIO_Label
@@ -459,28 +474,34 @@ PF1.GPIOParameters=GPIO_Label
 PF1.GPIO_Label=STOPPER
 PF1.Locked=true
 PF1.Signal=GPIO_Output
-PF10.GPIOParameters=GPIO_Label
+PF10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF10.GPIO_Label=SP_2
+PF10.GPIO_PuPd=GPIO_PULLUP
 PF10.Locked=true
 PF10.Signal=GPIO_Input
-PF11.GPIOParameters=GPIO_Label
+PF11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF11.GPIO_Label=SP_6
+PF11.GPIO_PuPd=GPIO_PULLUP
 PF11.Locked=true
 PF11.Signal=GPIO_Input
-PF12.GPIOParameters=GPIO_Label
+PF12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF12.GPIO_Label=SP_7
+PF12.GPIO_PuPd=GPIO_PULLUP
 PF12.Locked=true
 PF12.Signal=GPIO_Input
-PF13.GPIOParameters=GPIO_Label
+PF13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF13.GPIO_Label=SP_8
+PF13.GPIO_PuPd=GPIO_PULLUP
 PF13.Locked=true
 PF13.Signal=GPIO_Input
-PF14.GPIOParameters=GPIO_Label
+PF14.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF14.GPIO_Label=PIN_UP
+PF14.GPIO_PuPd=GPIO_PULLUP
 PF14.Locked=true
 PF14.Signal=GPIO_Input
-PF15.GPIOParameters=GPIO_Label
+PF15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF15.GPIO_Label=PCB_OUT
+PF15.GPIO_PuPd=GPIO_PULLUP
 PF15.Locked=true
 PF15.Signal=GPIO_Input
 PF2.GPIOParameters=GPIO_Label
@@ -511,16 +532,19 @@ PF8.GPIOParameters=GPIO_Label
 PF8.GPIO_Label=SP_D
 PF8.Locked=true
 PF8.Signal=GPIO_Output
-PF9.GPIOParameters=GPIO_Label
+PF9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF9.GPIO_Label=SP_1
+PF9.GPIO_PuPd=GPIO_PULLUP
 PF9.Locked=true
 PF9.Signal=GPIO_Input
-PG0.GPIOParameters=GPIO_Label
+PG0.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG0.GPIO_Label=PCB_IN
+PG0.GPIO_PuPd=GPIO_PULLUP
 PG0.Locked=true
 PG0.Signal=GPIO_Input
-PG1.GPIOParameters=GPIO_Label
+PG1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG1.GPIO_Label=PCB_DET
+PG1.GPIO_PuPd=GPIO_PULLUP
 PG1.Locked=true
 PG1.Signal=GPIO_Input
 PG10.GPIOParameters=GPIO_Label
@@ -552,8 +576,9 @@ PG2.GPIO_Label=TEACH
 PG2.GPIO_PuPd=GPIO_PULLUP
 PG2.Locked=true
 PG2.Signal=GPIO_Input
-PG3.GPIOParameters=GPIO_Label
+PG3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG3.GPIO_Label=FAST
+PG3.GPIO_PuPd=GPIO_PULLUP
 PG3.Locked=true
 PG3.Signal=GPIO_Input
 PG4.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -576,8 +601,9 @@ PG7.GPIO_Label=X_PLUS
 PG7.GPIO_PuPd=GPIO_PULLUP
 PG7.Locked=true
 PG7.Signal=GPIO_Input
-PG8.GPIOParameters=GPIO_Label
+PG8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG8.GPIO_Label=DEG_90
+PG8.GPIO_PuPd=GPIO_PULLUP
 PG8.Locked=true
 PG8.Signal=GPIO_Input
 PG9.GPIOParameters=GPIO_Label
