tweaking for new stepper driver (25times more steps per rev)

--- a/grbl-stm32f4.ioc
+++ b/grbl-stm32f4.ioc
@@ -698,8 +698,9 @@ TIM2.IPParameters=Period,ClockDivision
 TIM2.Period=1000
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM3.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM3.IPParameters=Period,ClockDivision,AutoReloadPreload
-TIM3.Period=0
+TIM3.IPParameters=Period,ClockDivision,AutoReloadPreload,Prescaler
+TIM3.Period=10
+TIM3.Prescaler=16
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
